syntax = "proto3";

option csharp_namespace = "GrpcService";

package booking;

service Booking {
    rpc CreateAsync (BookingObj) returns (BookingResponse);
    rpc GetByIdAsync (BookingId) returns (BookingObj);
    rpc GetByDtoAsync (BookingDto) returns (BookingObj);
    rpc UpdateAsync (BookingObj) returns (BookingResponse);
    rpc DeleteAsync (BookingId) returns (BookingResponse);
}

message BookingObj {
    int32 id = 1;
    int32 patient_id = 2;
    int32 doctor_id = 3;
    string date = 4;
    string time = 5;
}

message BookingId {
    int32 id = 1;
}

message BookingDto {
    string date = 1;
    string time = 2;
}

message BookingResponse {
    bool successful = 1;
}